sdl semantics example, demon game runs.