@@ -2,6 +2,6 @@ package hub.sam.sdlplus.datatypes;
 
 public class IntegerType implements DataTypeRepresentation {
     public DataValueRepresentation createValueFromLiteral(String literal) {
-        return new Integer(java.lang.Integer.getInteger(literal));
+        return new Integer(java.lang.Integer.valueOf(literal));
     }
 }
